Fix margin so it does not create too much space between cards

--- a/AnthraClient/client/web/src/Dashboard/Components/Messages/Messages.css
+++ b/AnthraClient/client/web/src/Dashboard/Components/Messages/Messages.css
@@ -33,7 +33,7 @@ body.dark .messages-page {
   display: flex;
   flex: 2;
   flex-direction: column;
-  margin: 15px;
+  margin: 15px 15px 15px 0;
   border-radius: 10px;
   background-color: white;
 }
@@ -77,13 +77,13 @@ body.dark .contact-header:hover {
   object-fit: cover;
   width: 40px;
   height: 40px;
-  border-radius: 10%;
+  border-radius: 50%;
   margin-right: 10px;
 }
 
 .contact-name {
   font-size: 0.9rem;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 /* Dark mode styles */
